tests/ui/spirv-attr/invariant-invalid.stderr
error: #[rust_gpu::spirv(invariant)] is only valid on Output variables
 --> $DIR/invariant-invalid.rs:7:31
  |
7 | pub fn main(#[rust_gpu::spirv(invariant)] input: f32) {}
  |                               ^^^^^^^^^

error: aborting due to previous error

